--- a/Pypi/maths/numpy.ipynb
+++ b/Pypi/maths/numpy.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "5. [Array reshaping](#array-reshaping)\n",
     "\n",
-    "6. [Array manipulation](#Array-manipulation)"
+    "6. [Array manipulation](#Array-manipulation)\n",
+    "\n",
+    "7. [Mathematical Functions](#mathematical-functions)"
    ]
   },
   {
@@ -685,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -721,8 +723,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**reshape & resize**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -733,9 +742,13 @@
       " [20 25 30 35]\n",
       " [40 45 50 55]] \n",
       "\n",
-      "[[ 0]\n",
-      " [20]\n",
-      " [40]] \n",
+      "[[ 0  5 10 15]\n",
+      " [20 25 30 35]\n",
+      " [40 45 50 55]] \n",
+      "\n",
+      "[[ 0  5 10 15 20 25 30 35]\n",
+      " [40 45 50 55  0  5 10 15]\n",
+      " [20 25 30 35 40 45 50 55]] \n",
       "\n",
       "(0,0) (5,0) (10,0) (15,0) (20,20) (25,20) (30,20) (35,20) (40,40) (45,40) (50,40) (55,40) "
      ]
@@ -746,8 +759,10 @@
     " \n",
     "a = np.arange(0,60,5).reshape(3,4)\n",
     "b = np.arange(0,60,20).reshape(3,1)\n",
-    "print (a,'\\n')\n",
-    "print (b,'\\n')\n",
+    "c = np.resize(a, (3, 8)) # resize a to the same shape as b\n",
+    "print(a,'\\n')\n",
+    "print(a,'\\n')\n",
+    "print(c,'\\n')\n",
     "\n",
     "for x, y in np.nditer([a, b]): # iterate over two arrays with broadcasting\n",
     "    print(f\"({x},{y})\", end=' ')"
@@ -1124,6 +1139,234 @@
     "print(z[0].shape,'\\n') # shape of z\n",
     "print(y[0],'\\n') # split array along axis 0\n",
     "print(z[0],'\\n') # split array along axis 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**append**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [4 5]\n",
+      " [5 6]\n",
+      " [7 8]] \n",
+      "\n",
+      "[[1 2 5 6]\n",
+      " [4 5 7 8]] \n",
+      "\n",
+      "[1 2 4 5 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1, 2], [4, 5]])\n",
+    "y = np.array([[5, 6], [7, 8]])\n",
+    "z = np.append(x, y, axis=0) # append along axis 0\n",
+    "w = np.append(x, y, axis=1) # append along axis 1\n",
+    "u = np.append(x, [2,4])\n",
+    "print(z,'\\n') # shape of x\n",
+    "print(w,'\\n') # shape of y\n",
+    "print(u) # shape of z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**insert**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [5 5]\n",
+      " [3 4]] \n",
+      "\n",
+      "[[1 5 2]\n",
+      " [3 5 4]] \n",
+      "\n",
+      "[ 1  9 10  2  3  4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1, 2], [3, 4]])\n",
+    "y = np.array(5)\n",
+    "z = np.insert(x, 1, y, axis=0) # insert along axis 0 at index 1\n",
+    "w = np.insert(x, 1, y, axis=1) # insert along axis 1 at index 1\n",
+    "u = np.insert(x, 1, [9, 10]) # insert at index 1 without axis leads to flattening\n",
+    "print(z,'\\n') # shape of x\n",
+    "print(w,'\\n') # shape of y\n",
+    "print(u) # shape of z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**delete**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]] \n",
+      "\n",
+      "[[1]\n",
+      " [3]] \n",
+      "\n",
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[1, 2], [3, 4]])\n",
+    "y = np.delete(x, 1, axis=0) # delete along axis 0 at index 1\n",
+    "z = np.delete(x, 1, axis=1) # delete along axis 1 at index 1\n",
+    "u = np.delete(x, 3) # delete at index 1 without axis leads to flattening\n",
+    "print(y,'\\n')\n",
+    "print(z,'\\n')\n",
+    "print(u) # shape of z "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**unique**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 9] \n",
+      "\n",
+      "[0 1 2 5 7 4] \n",
+      "\n",
+      "[1 2 3 4 5 9] \n",
+      "\n",
+      "[2 1 2 1 1 1] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([1,2,3,3,9,4,1,5]) # create an array with duplicates\n",
+    "y = np.unique(x) # find unique elements\n",
+    "print(y,'\\n') # unique elements\n",
+    "z, indices, counts = np.unique(x, return_index=True, return_counts=True) # find unique elements and their indices\n",
+    "print(indices,'\\n') # indices of unique elements\n",
+    "print(x[indices],'\\n') # original elements at unique indices\n",
+    "print(counts,'\\n') # counts of unique elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ### Mathematical Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**elementary functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.   0.71 0.87 0.  ] \n",
+      "\n",
+      "[ 1.    0.71  0.5  -1.  ] \n",
+      "\n",
+      "[ 0.    1.    1.73 -0.  ] \n",
+      "\n",
+      "1.633123935319537e+16 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([0,np.pi/4,np.pi/3,np.pi]) # create an array\n",
+    "sin = np.sin(x) # sine of elements\n",
+    "cos = np.cos(x) # cosine of elements\n",
+    "tan = np.tan(x) # tangent of elements\n",
+    "print(np.around(sin, decimals=2),'\\n') # sine values\n",
+    "print(np.around(cos, decimals=2),'\\n') # cosine values\n",
+    "print(np.around(tan, decimals=2),'\\n') # tangent value\n",
+    "print(np.tan(np.pi/2),'\\n') # tangent of pi/2, should be inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.   0.34 0.52 1.57] \n",
+      "\n",
+      "[1.57 1.23 1.05 0.  ] \n",
+      "\n",
+      "[0.   0.32 0.46 0.79] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([0, 1/3, 1/2, 1]) # create an array\n",
+    "arcsin = np.arcsin(x) # arcsine of elements\n",
+    "arccos = np.arccos(x) # arccosine of elements\n",
+    "arctan = np.arctan(x) # arctangent of elements\n",
+    "print(np.around(arcsin, decimals=2),'\\n') # arcsine values\n",
+    "print(np.around(arccos, decimals=2),'\\n') # arccosine values\n",
+    "print(np.around(arctan, decimals=2),'\\n') # arctangent values"
    ]
   }
  ],
